Creacion de servicios, controller y repositories. Cambios en model.

--- a/analizador-xgot/src/main/resources/application.properties
+++ b/analizador-xgot/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=analizador-xgot
+spring.data.mongodb.uri=mongodb+srv://pumabodegagpt:H1kzkRGieGwppWL0@xgot-cluster.gtbwx6p.mongodb.net/?retryWrites=true&w=majority&appName=xGOT-cluster
+spring.data.mongodb.database=shotvalue
+server.port=8080
