--- a/analizador-xgot/pom.xml
+++ b/analizador-xgot/pom.xml
@@ -51,11 +51,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>21</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
@@ -108,7 +103,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.shotvalue.front.HelloApplication</mainClass>
+                    <mainClass>com.shotvalue.analizador_xgot.front.HelloApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
