Cambios en el pipeline

--- a/.github/workflows/check-develop-front.yml
+++ b/.github/workflows/check-develop-front.yml
@@ -1,3 +1,4 @@
+# .github/workflows/verificar-develop-front.yml
 name: Verificar merge a develop-front
 
 on:
@@ -10,9 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1) Checkout
       - name: Clonar repo
         uses: actions/checkout@v3
 
+      # 2) JDK 17 + caché Maven
       - name: Configurar Java
         uses: actions/setup-java@v3
         with:
@@ -20,6 +23,7 @@ jobs:
           java-version: 17
           cache: maven
 
+      # 3) Compilar y testear el frontend
       - name: Compilar y testear con Maven (frontend)
-        working-directory: ./analizador-frontend
-        run: ./mvnw --batch-mode clean verify
+        run: mvn -B -f analizador-frontend/pom.xml clean verify
+
