--- a/analizador-xgot/pom.xml
+++ b/analizador-xgot/pom.xml
@@ -103,7 +103,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.shotvalue.analizador_xgot.HelloApplication</mainClass>
+                    <mainClass>com.shotvalue.analizador_xgot.Launcher</mainClass>
                 </configuration>
             </plugin>
         </plugins>
