--- a/analizador-frontend/pom.xml
+++ b/analizador-frontend/pom.xml
@@ -61,6 +61,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.1.1</version> <!-- O la versión compatible con tu JavaFX -->
+        </dependency>
+
     </dependencies>
 
     <!-- ======== Plugins ======== -->
