--- a/window.properties
+++ b/window.properties
@@ -1,5 +1,3 @@
 #Tamaño de ventana
-#Sat Jun 07 15:13:37 CEST 2025
-height=600.0
-maximized=false
-width=900.0
+#Sat Jun 07 15:19:23 CEST 2025
+maximized=true
