--- a/analizador-frontend/pom.xml
+++ b/analizador-frontend/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>controlsfx</artifactId>
             <version>11.1.1</version> <!-- O la versión compatible con tu JavaFX -->
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.18.3</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
